@@ -23,6 +23,7 @@ m_worldmap(false),
 m_animation_enabled(true),
 m_Dark(false),
 m_Difficulty(1),
+m_PlatExtending(false),
 m_Tilemaps(g_pGfxEngine->getTileMaps()),
 m_animtiletimer(0),
 m_Background(false)
