@@ -63,6 +63,7 @@ m_Object(Object)
 
 	veloc_x = speed * vector_x;
 	veloc_y = speed * vector_y;
+	g_pSound->playStereofromCoord(SOUND_CANNONFIRE, PLAY_NOW, getXPosition());
 }
 
 void CIceChunk::process()
