@@ -28,6 +28,7 @@ SOUND_LEVEL_DONE,
 SOUND_GAME_OVER,
 SOUND_TELEPORT,
 SOUND_EXTRA_LIFE,
+SOUND_CANNONFIRE,
 SOUND_CHUNKSMASH,
 SOUND_GOINDOOR,
 SOUND_GET_CARD,
